[package]
name = "isengard"
version = "0.0.1"
authors = [ "merdescu-razvan <merdescu.razvan@gmail.com>",]
edition = "2021"
publish = false

[lib]
path = "src/isengard.rs"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies.elrond-wasm]
version = "0.18.2"
features = ["derive"]

[dependencies.elrond-wasm-node]
version = "0.18.2"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.18.2"
