[package]
name = "isengard-token-sale"
version = "0.0.1"
authors = [ "Razvan Merdescu <razvan.merdescu@isengardmarket.com>",]
edition = "2021"
publish = false

[lib]
path = "src/tokensale.rs"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies.elrond-wasm]
version = "0.21.0"
features = ["derive"]

[dependencies.elrond-wasm-node]
version = "0.21.0"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.21.0"
